fix licence in Cargo.toml
Signed-off-by: Blyschak <stepanblischak@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "async-timers"
 version = "0.1.0"
 edition = "2021"
 repository = "https://github.com/Blyschak/async-timers"
-license = "The Unlicense"
+license = "Unlicense"
 keywords = ["async-io", "tokio", "timers"]
 categories = ["asynchronous"]
 description = "Provides asynchronous timer primitives"
