--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "async-timers"
-version = "0.1.1"
+version = "0.1.3"
 edition = "2021"
 repository = "https://github.com/Blyschak/async-timers"
 license = "Unlicense"
@@ -13,5 +13,8 @@ readme = "README.md"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.20.1", features = ["full"] }
+tokio = { version = "1.20.1", features = ["time"] }
 futures = "0.3.21"
+
+[dev-dependencies]
+tokio = { features = ["full"] }
